Weakened to XSS

--- a/angular-app/src/app/posts/posts.component.html
+++ b/angular-app/src/app/posts/posts.component.html
@@ -7,6 +7,6 @@
 
 <span *ngIf="posts">
   <span *ngFor="let post of posts">
-    <p class="name">{{ post.message }}</p>
+    <p class="name" [innerHTML]="post.message | sanitizeHtml"></p>
   </span>
 </span>
